--- a/.github/workflows/curl-docker.yml
+++ b/.github/workflows/curl-docker.yml
@@ -1,22 +1,18 @@
-name: Docker-install  
-  
-on:  
-  workflow_dispatch:  
-  schedule:  
-    - cron: '00 23 * * *'  
-  
-permissions:  
-  contents: write  
-  
-jobs:  
-  download_docker_installer:  
-    runs-on: ubuntu-latest   
-    steps:  
-        uses: actions/checkout@v4  
-  
-        run: curl -o docker-ins.sh "https://get.docker.com"
-  
-        uses: softprops/action-gh-release@v2  
-        with:  
-          files: docker-ins.sh  
-          tag_name: v1.0.0
+name: Docker-install
+
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '00 23 * * *'
+
+permissionis:
+  contents: write
+  jobs:
+    runs-on: ubuntu-latest
+    steps:
+      uses: actions/checkout@v4
+      run: curl -o docker-ins.sh "https://get.docker.com"
+      uses: softprops/action-gh-release@v2
+      with:
+        files: docker-ins.sh
+        tag_name: v1.0.0
