--- a/.github/workflows/curl-docker.yml
+++ b/.github/workflows/curl-docker.yml
@@ -12,8 +12,10 @@ permissionis:
       runs-on: ubuntu-latest
       steps:
         uses: actions/checkout@v4
-        run: curl -o docker-ins.sh "https://get.docker.com"
+        run: |
+          curl -o docker-ins.sh "https://get.docker.com"
         uses: softprops/action-gh-release@v2
         with:
-          files: docker-ins.sh
+          files: |
+            docker-ins.sh
           tag_name: v1.0.0
