--- a/.github/workflows/curl-docker.yml
+++ b/.github/workflows/curl-docker.yml
@@ -1,21 +1,28 @@
-name: Docker-install
+name: Docker Installer Download
 
 on:
   workflow_dispatch:
   schedule:
     - cron: '00 23 * * *'
 
-permissionis:
+permissions:
   contents: write
-  jobs:
-    download_installer:
-      runs-on: ubuntu-latest
-      steps:
-        uses: actions/checkout@v4
-        run: |
-          curl -o docker-ins.sh "https://get.docker.com"
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            docker-ins.sh
-          tag_name: v1.0.0
+
+jobs:
+  download_installer:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Download installers
+      run: |
+         curl -o docker-ins.sh "https://get.docker.com"
+
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      with:
+        files: |
+          docker-ins.sh
+        tag_name: v1.0.0
