--- a/.github/workflows/curl-docker.yml
+++ b/.github/workflows/curl-docker.yml
@@ -17,12 +17,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Download installers
-      run: |
-         curl -o docker-ins.sh "https://get.docker.com"
+      run: curl -o docker-ins.sh "https://get.docker.com"
 
     - name: Release
       uses: softprops/action-gh-release@v2
       with:
-        files: |
-          docker-ins.sh
+        files: docker-ins.sh
         tag_name: v1.0.0
